# tour-of-bazel

./: .bazelrc  MODULE.bazel
.github/workflows/: main.yml
app/: main.cpp
docs/: 00_intro.md
lib/: BUILD  hello_lib.cpp  hello_lib.hpp  hello_lib_test.cpp
main/: BUILD
py/: hello.py
tests/: BUILD  hello_lib_test.cpp
